# predicting-clinicaltrials

./: .gitattributes  README.md  run_exp.sh
config/: default_cols.yaml
data/: .gitattributes  README.md  cancer_types.ipynb  cleaned_data_phase1_2bin_test.csv  cleaned_data_phase1_2bin_train.csv  cleaned_data_phase1_lungc_2bin_test.csv  cleaned_data_phase1_lymph_2bin_train.csv  cleaned_data_phase2_2bin_test.csv  cleaned_data_phase2_2bin_train.csv  cleaned_data_phase3_2bin_test.csv  cleaned_data_phase3_2bin_train.csv  cleaned_data_test.csv  cleaned_data_test_ac.csv  cleaned_data_train.csv  cleaned_data_train_ac.csv  conditions_features_extract.ipynb  fetch_data.py  long_cleaned_data_phase1_lungc_2bin_test.csv  long_cleaned_data_phase1_lymph_2bin_train.csv  long_cleaned_data_phase1_oncol_2bin_test.csv  long_cleaned_data_phase1_oncol_2bin_train.csv  long_metadata.json  long_model_features.ipynb  make_sme_protocols.py  metadata.json  one_hot_nominal.ipynb  outlier_removal.ipynb  phase1_oncology_2011_api.json  phase2_oncology_2011_api.json  phase3_2011_api.csv  processing.py  processing_long.py  rf_one_hot_original.ipynb  sme_protocols.csv  survival_dict.csv  (+2 more)
trial_app/: .dockerignore  Dockerfile.fastapi  Dockerfile.streamlit  README.md  docker-compose.yaml  pyproject.toml
trial_app/backend/: metadata.json  model.pkl  model_columns.txt
trial_app/backend/src/: debugging.ipynb  main.py
trial_app/backend/tests/: test_src.py
trial_app/frontend/: app.py  streamlit.py
trial_app/frontend/pages/: about.py  contact.py  helper_functions.py  home.py  loading.py  trial.py
(+30 files in other folders)
