[tool.poetry]
name = "trial-app"
version = "0.1.0"
description = ""
authors = ["cynthiaxu04 <cynthiaxu04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
