[tool.poetry]
name = "trial-app"
version = "0.1.0"
description = ""
authors = ["cynthiaxu04 <cynthiaxu04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.0"
pytest = "^8.3.1"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
joblib = "^1.4.2"
numpy = "^2.0.1"
streamlit = "^1.36.0"
tornado = "6.4.2"
python-multipart = "0.0.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

